--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
     <head>
-        <!--HTML file auto generated using emulatorjs codehelper-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .container {
+      position: relative;
+      width: 100%;
+      overflow: hidden;
+      height: 100%;
+    }
+    
+
+    .responsive-iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
     </head>
     <body>
-        <div style="width:640px;height:480px;max-width:100%">
+        <div class="container">
             <div id="game"></div>
         </div>
         <script>
