--- a/index.html
+++ b/index.html
@@ -3,14 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     .container {
-      position: relative;
-      width: 100%;
-      overflow: hidden;
-      height: 100%;
-    }
-    
-
-    .responsive-iframe {
       position: absolute;
       top: 0;
       left: 0;
@@ -19,10 +11,11 @@
       width: 100%;
       height: 100%;
       border: none;
+      overflow: hidden;
     }
   </style>
     </head>
-    <body>
+    <body scroll="no" style="overflow: hidden">
         <div class="container">
             <div id="game"></div>
         </div>
